# gpticulate

backend/: pyproject.toml
backend/src/: prompt.md
backend/src/backend/: main.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  layout.tsx  main.tsx  routes.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/pages/: GamePage.tsx  Homepage.tsx
frontend/src/services/: session-service.ts
